<resources>
    <string name="app_name">ProyectoTSyS</string>
    <string name="title_activity_register">Registrar</string>

    <string name="photo_source">Seleccione Imagen</string>
    <string name="camera">Camara</string>
    <string name="gallery">Galeria</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">HOME</string>
    <string name="title_temas">TEMAS</string>
    <string name="title_disponibilidad">DISPONIBILIDAD</string>
    <string name="title_historial">HISTORIAL</string>
    <string name="title_perfil">CUENTA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="pref_file">pe.edu.upc.proyectotsys</string>
    <string name="pref_login_status">pe.edu.upc.proyectotsys.preferences_login_status</string>
    <string name="pref_user_name">pe.edu.upc.proyectotsys.preferences_user_name</string>


</resources>
